--- a/websystems/websystems.css
+++ b/websystems/websystems.css
@@ -1,3 +1,26 @@
+body.index{
+    background-color: aqua;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+body.past{
+    background-color: black;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+}
+
+body.future{
+    background-color: dodgerblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:black;
+}
+
+body.comments{
+    background-color: green;
+    font-family: Arial, Helvetica, sans-serif;
+    color:black;
+}
+
 h1 {
     max-width: 750px;
     font-family: 'Times New Roman', Times, serif;
@@ -11,9 +34,8 @@ h2 {
     font-size: medium;
 }
 
-p {
+#p {
     max-width: 600px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
-    background-color: blueviolet;
 }
