--- a/websystems/websystems.css
+++ b/websystems/websystems.css
@@ -34,8 +34,13 @@ h2 {
     font-size: medium;
 }
 
-#p {
+p {
     max-width: 600px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+}
+
+#table-future {
+    border: 1px solid;
+    width: 75%;
 }
