--- a/websystems/websystems.css
+++ b/websystems/websystems.css
@@ -1,6 +1,7 @@
 body.index{
     background-color: aqua;
     font-family: 'Times New Roman', Times, serif;
+    color:black;
 }
 
 body.past{
@@ -38,6 +39,20 @@ p {
     max-width: 600px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+}
+
+p.future {
+    max-width: 600px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color: chartreuse;
+}
+
+h1.future {
+    max-width: 750px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    color: chartreuse;
 }
 
 #table-future {
